# omegalib

./: AppFlow.md  BasicCyclops.md  BasicOSG.md  BasicOpenGL.md  BasicPython.md  BasicVtk.md  CAVE2HowTo.md  CMakeLists.txt  CameraController.md  CommandLine.md  ConfigReference.md  CyclopsPythonReference.md  Downloads.md  DraftMulticamera.md  EffectReference.md  ExtendingOmegalib.md  Features.md  Filesystem.md  GettingStarted.md  HowTos.md  MakeDistro.bat.in  MakeRelease.bat.in  MissionControl.md  MultiInstance.md  NewApplication.md  OmegaProgress.md  OmegaPythonReference.md  OmegaToolkitPythonReference.md  OmegaVtkPythonReference.md  PortholeReference.md  ProjectHome.md  PythonExamples.md  QuickCommands.md  README.md  ReleaseNotes.md  Sidebar.md  UpdateEqualizerLibs.bat  portholeMsgPassing.graffle
branches/shelf/: CMakeLists.txt
branches/shelf/CMakeModules/: OmegaAddTutorial.cmake  UseOmegalib.cmake.in
branches/shelf/data/: default.cfg  default_init.py
branches/shelf/include/: cyclops.h  omegaOsg.h
branches/shelf/modules/: CMakeLists.txt
branches/shelf/old/: BoundingSphere.cpp  LightingPass.cpp  SceneView.h  SkyboxSwitcher.h
branches/shelf/src/: CMakeLists.txt
branches/v0.3/src/: CMakeLists.txt
ext/sample-external-app/: CMakeLists.txt  sample.cpp
src/: CMakeLists.txt
src/HelloOmega/: stdafx.cpp
src/apps/Launcher/: Button.pde  Launcher.pde  Star.pde
src/apps/common/: Flock.cpp  Flock.h  FlockRenderable.cpp
src/apps/cyclops/: CMakeLists.txt  Entity.h  ReaderXOBJ.cpp  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SceneScript.cpp  SceneScript.h  cyclops.cpp
src/apps/cyhello/: CMakeLists.txt  cyhello.cpp
src/apps/cyhello2/: CMakeLists.txt  cyhello2.cpp
src/apps/eventlogger/: eventlogger.cpp
src/apps/flock/: CMakeLists.txt  FlockObject.cpp  FlockObject.h  FlockSimulator.cpp  FlockSimulator.h  flock.cpp
src/apps/geoView/: geoView.cpp
src/apps/kinectdemo/: CMakeLists.txt  kinectdemo.cpp  kinectdemo.h
src/apps/mcsend/: CMakeLists.txt  mcsend.cpp
src/apps/meshviewer/: CMakeLists.txt  Entity.cpp  MeshViewerUI.cpp  meshviewer.cpp  meshviewer.h
src/apps/mocalib/: mocalib.cpp
src/apps/multipleKinectDemo/: CMakeLists.txt  multipleKinectDemo.cpp
src/apps/nightfield/: CMakeLists.txt  Flock.cpp  Flock.h  FlockRenderable.cpp  nightfield.cpp  nightfield.h
src/apps/ohello/: ohello.cpp  teapot.cpp
src/apps/ohello2/: CMakeLists.txt  ohello2.cpp
src/apps/oinputserver/: oinputserver.cpp
src/apps/omegaSound/: omegaSound.cpp
src/apps/orun/: CMakeLists.txt  orun.cpp
src/apps/osgbBCC/: osgbBCC.cpp
src/apps/osgbBasicDemo/: CMakeLists.txt
src/apps/osgbCollision/: CMakeLists.txt  osgbCollision.cpp
src/apps/osgbDice/: CMakeLists.txt
src/apps/osgparallax/: osgparallax.cpp
src/apps/osgviewer/: CMakeLists.txt  (+2 more)
src/cyclops/: AnimatedObject.cpp  CMakeLists.txt  DrawableObject.cpp  EffectNode.cpp  Entity.cpp  Light.cpp  LineSet.cpp  Material.cpp  MaterialParser.cpp  MenuManager.cpp  ModelLoader.cpp  SceneLoader.cpp  SceneManager.cpp  Shapes.cpp  Skybox.cpp  SkyboxSwitcher.cpp  StaticObject.cpp  Text3D.cpp  Uniforms.cpp  cyclopsPythonApi.cpp
src/gesture3dTest/: CMakeLists.txt  main.cpp
src/meshviewer/: Entity.cpp  Entity.h  MeshViewerApplication.cpp
src/nightfield/: NightfieldApplication.cpp  NightfieldApplication.h  nightfield.cpp
src/odemo/: odemo.cpp
src/oengine/: CMakeLists.txt
src/oinputserver/: oinputserver.cpp
src/omega/: CMakeLists.txt  Camera.cpp  Config.cpp  Console.cpp  CylindricalDisplayConfig.cpp  DisplayConfig.cpp  DrawInterface.cpp  Engine.cpp  EqualizerDisplaySystem.cpp  EventSharingModule.cpp  Font.cpp  GLUTDisplaySystem.cpp  GlutDisplaySystem.cpp  ImageUtils.cpp  InputManager.cpp  KeyboardMouseCameraController.cpp  MissionControl.cpp  MouseCameraController.cpp  Node.cpp  Observer.cpp  PixelData.cpp  PortholeService.cpp  PythonInterpreter.cpp  RenderTarget.cpp  Renderer.cpp  SageManager.cpp  SceneNode.cpp  StatsManager.cpp  SystemManager.cpp  Texture.cpp  TextureRef.cpp  TextureSource.cpp  TrackedObject.cpp  Utils.cpp  WandCameraController.cpp  image.c  ocfg.c  oevent.c  olist.c  omega.c  (+3 more)
src/omegaOsg/: CMakeLists.txt  OsgModule.cpp  OsgRenderPass.cpp  SceneView.cpp
src/omegaToolkit/: AppDrawer.cpp  CMakeLists.txt  DefaultMouseInteractor.cpp  RenderableSceneObject.cpp  SceneEditorModule.cpp  ToolkitUtils.cpp  UiRenderPass.cpp  omegaToolkitPythonApi.cpp
src/omegaVtk/: CMakeLists.txt  VtkModule.cpp  omegaVtkPythonApi.cpp
src/oosg/: CMakeLists.txt
src/oqt/: CMakeLists.txt
src/otest/: CMakeLists.txt  otest.c  otest.cpp
src/otest_Jak/: CMakeLists.txt  otest.cpp
src/outils/: CMakeLists.txt
src/outk/: CMakeLists.txt
src/ovtk/: CMakeLists.txt
src/playground/: PlaygroundObjects.cpp
src/vtkdemo/: VtkDemoUI.cpp
trunk/: CMakeLists.txt  MakeDistro.bat.in  MakeRelease.bat.in  README.md  UpdateEqualizerLibs.bat
trunk/CMakeModules/: FindOmegalib.cmake  FindOmicron.cmake  OmegalibConfig.cmake.in  UseOmegalib.cmake.in
trunk/HelloOmega/: HelloOmega.c  HelloOmega.vcproj  OmegaTouchAPI.cpp  OmegaTouchAPI.h
trunk/TrackIR_Server/: TrackIR_Server.vcproj
trunk/data/: NetService.cfg  calibrationFile.xml  cyhello.cfg  default.cfg  default_init.py  eventlogger.cfg  flock.cfg  generic-eq-480p.cfg  generic-glut-480p.cfg  generic-omegadesk.cfg  gesture3d.cfg  hplviewer.cfg  meshviewer.cfg  mocalib.cfg  nightfield-laptop.cfg  nightfield.cfg  ohello.cfg  oinputserver.cfg  omegadesk.cfg  orun_init.py  osgviewer.cfg  railSim.cfg  runExamples.py  structure.cfg  test.cfg  vtkviewer.cfg
trunk/docs/: APIScraps.txt  Doxyfile
trunk/ext/: UseAsio.cmake  UseEqualizer.cmake  UseFtgl.cmake  UseOmegalib.cmake  UseOpenSceneGraph.cmake  UseOsgWorks.cmake
trunk/include/: Application.h  Config.h  DisplaySystem.h  EqualizerDisplaySystem.h  GLUTDisplaySystem.h  InputEvent.h  InputManager.h  cyclops.h  ocfg.h  odisplay.h  oengine.h  oevent.h  ogfx.h  oinput.h  olist.h  omega.h  omegaToolkit.h  omegaVtk.h  oosg.h  ostate.h  osystem.h  othread.h  outil.h  outk.h
trunk/old/: WindowManager.h
trunk/src/: CMakeLists.txt
(+16790 files in other folders)
